--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-.heading{
+h1{
     font-family: "Lobster", sans-serif;
-    font-size:  10vw;
+    font-size:  7vw;
 }
 
 *{
@@ -33,6 +33,26 @@ img{
    margin: 2rem;
 }
 
+button{
+    display: block;
+    margin: 2rem auto;
+    background-color: #FF0000;
+    width: 10rem;height: 5rem;
+    border-radius: 2rem;
+    border: none;
+    padding: 5px;
+    font-family: "Poppins",sans-serif;
+    font-size: 2rem;
+    color: #000080;
+    font-weight:bolder;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color:cornsilk;
+    transition-duration: 0.5s;
+}
+
 footer,h1{
     display: flex;
     justify-content: center;   
@@ -42,4 +62,5 @@ footer,h1{
 footer{
     font-family: 'Poppins','sans-serif';
     text-decoration: underline;
+    margin-bottom: 2rem;
 }
